--- a/code/docker_compose.yml
+++ b/code/docker_compose.yml
@@ -1,16 +1,16 @@
-version: '3'
-services:
-  order:
-    image: filipklimes-diploma/example-order-service
-    ports:
+%%version:%% '3'
+%%services:%%
+  %%order:%%
+    %%image:%% filipklimes-diploma/example-order-service
+    %%ports:%%
       - "5501:5501"
       - "5551:5551"
-    depends_on:
-      - "product"
-      - "billing"
-      - "shipping"
-      - "user"
-    links:
+    %%depends_on:%%
+      - product
+      - billing
+      - shipping
+      - user
+    %%links:%%
       - product
       - user
       - billing
